# nhs-sds-sandbox

./: .dockerignore  .gitallowed  .gitdisallowed  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/actions/build-common/: action.yml
.github/actions/install-ci/: action.yml
.github/workflows/: create-release.yml  pull-request.yml
.github/workflows/build-common/: action.yml
ldifs/: 00_nhs_base.ldif  01_nhs_base_orgs.ldif  10_nhs_users_sample.ldif
more-ldifs/: 20_my_custom_users.ldif
schemas/: 00_nhs_attrs.ldif  01_nhs_classes.ldif
scripts/hooks/: pre-commit.sh
tests/: conftest.py  ldap_tests.py
